--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
